Updated support form z index, button location on mobile. Resolves #729.

--- a/src/components/supportRequest/supportRequestForm.module.css
+++ b/src/components/supportRequest/supportRequestForm.module.css
@@ -18,7 +18,7 @@
     position: fixed;
     right: 24px;
     width: 450px;
-    z-index: 2;
+    z-index: 100;
 }
 
 /* Thank you */
